// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-aYaIB bhPAlR"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-aYaIB sc-gEvDqW bhPAlR dCeLBS"
  >
    Label
  </button>
</div>
`;
